# FA-II-2022-II-object-localization

./: .gitignore  README.md  data.dvc  eda.ipynb  pyproject.toml
.dvc/: config
