[tool.poetry]
name = "object_localization"
version = "0.1.0"
description = ""
authors = ["Sebastian Garcia <sebastian.garcia@wearemo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
dvc = {extras = ["gdrive"], version = "^2.30.0"}
opencv-python = "^4.6.0.66"
ipykernel = "^6.16.0"
torch = "^1.12.1"
matplotlib = "^3.6.0"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
